yaml_scrips/cuda_tests_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cuda-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cuda-test
  template:
    metadata:
      labels:
        app: cuda-test
    spec:
      restartPolicy: Always
      containers:
        - name: cuda-container
          image: quay.io/sdambo/cuda-apps:12.8.0  # Use a CUDA-enabled image
          imagePullPolicy: Always  
          command: ["/bin/bash", "-c"] 
          args:
            - |
              # apt-get update && apt-get install -y python3 python3-pip
              # pip3 install torch torchvision torchaudio
              echo "✅ Python and PyTorch installed"
              python3 -c "import torch; print('CUDA Available:', torch.cuda.is_available()); print('GPU Count:', torch.cuda.device_count()); print('GPU Device name:' ,torch.cuda.get_device_name())"
              /usr/sbin/sshd -D &
              tail -f /dev/null
          resources:
            limits:
              nvidia.com/gpu: 1  # Requests 1 GPU from the node
