yaml_scrips/rdma-32-workload.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rdma-eth-32-workload
  namespace: nvidia-tools
  annotations:
    k8s.v1.cni.cncf.io/networks: rdmashared-net
spec:
  nodeSelector: 
    kubernetes.io/hostname: nvd-srv-32.nvidia.eng.rdu2.dc.redhat.com
  serviceAccountName: rdma
  containers:
  - image: image-registry.openshift-image-registry.svc:5000/nvidia-tools/cuda-tools-build:latest
    name: rdma-32-workload
    securityContext:
      privileged: true
      capabilities:
        add: [ "IPC_LOCK" ]
    resources:
      limits:
        nvidia.com/gpu: 2
        rdma/rdma_shared_device_eth: 2
      requests:
        nvidia.com/gpu: 2
        rdma/rdma_shared_device_eth: 2
