yaml_scrips/autopilot-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: autopilot
  namespace: autopilot
spec:
  to:
    kind: Service
    name: autopilot-healthchecks
  port:
    targetPort: 3333  # This matches the service.port in your values.yaml
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
